--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
 # This file lists the awesome `simple_shell` repository Authors/contributors.
 
-Stephen Makenzi Waweru <stevomakenzi@gmail.com>
-Aloice Okoth <zacchaeusokoth4@gmail.com>
+Isaac Okai
